# personalAssistant

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  skills-lock.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  security.yml
agents/personal_assistant/: contract.md  worker-contract.md
docs/: skills-selection.md
docs/adr/: ADR-001-modular-monolith.md  ADR-002-l2-mvp.md  ADR-003-hexagonal-boundaries.md
eval/: README.md  cases.json
locales/: es.json
prompts/: registry.json
replies/: registry.json
scripts/: configure-github-governance.ps1
tests/: delivery_adversarial_harness.py  test_admin_dashboard.py  test_architecture_boundaries.py  test_command_router.py  test_contracts.py  test_delivery_adversarial_postgres.py  test_delivery_state.py  test_documents_and_channels.py  test_durable_state.py  test_events_outbox.py  test_http_local_auth.py  test_http_runtime.py  test_llm_adapters.py  test_local_auth.py  test_migrations.py  test_p0_safety_characterization.py  test_permissions_and_tenant.py  test_persistence_config.py  test_phase1_contract_regressions.py  test_postgres_due_claims.py  test_postgres_persistence.py  test_postgres_reminder_unit_of_work.py  test_prompt_and_reply_catalogs.py  test_public_artifacts.py  test_reminder_boundary_commands.py  test_reminder_boundary_http.py  test_reminder_boundary_parser.py  test_reminder_boundary_telegram.py  test_reminder_effect_ids.py  test_reminder_idempotency.py  test_reminder_identity_constraints_postgres.py  test_reminder_temporal_parser.py  test_reminder_unit_of_work.py  test_reminder_uow_fault_injection_postgres.py  test_reminder_workflow.py  test_scheduler_worker.py  test_telegram_notifications.py  test_trace_privacy.py  test_worker_runtime_postgres.py
(+162 files in other folders)
