[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-assistant"
version = "0.1.0"
description = "Shared contracts for a tenant-aware personal assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2,<3",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]
test = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pytest>=8",
]
postgres = [
  "psycopg[binary]>=3.2,<4",
]

[dependency-groups]
dev = [
  "build>=1.2",
  "coverage[toml]>=7.6",
  "diff-cover>=9.2",
  "mypy>=1.13",
  "pip-audit>=2.8",
  "pre-commit>=4.0",
  "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["personal_assistant*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["personal_assistant"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
